Fix demo button on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ h3 {margin: 6px; letter-spacing: 0.6vw; font-size: 0.75rem; display: inline-bloc
 #silhouette3 {top: 49%; left: 49%; z-index: 2; mix-blend-mode: difference;}
 
 /* ABOUT */
-canvas {position: absolute; top: 10%; left: 5%; display: inline-block;}
+canvas {position: absolute; top: 10%; left: 15%; display: inline-block;}
 .about-container {position: relative; height: 100vh; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: distribute; justify-content: space-around;}
 .about-box {display: block; position: relative; z-index: 20; left: 50%; width: 30%; min-height: 240px; background-color: #848484; -webkit-box-shadow: 0.05vw 0.1vw 0.13vw rgba(34,34,34,0.4); box-shadow: 0.05vw 0.1vw 0.13vw rgba(34,34,34,0.4); -webkit-transition: all 0.3s; transition: all 0.3s;}
 .about-box p {display: block; margin: 4%;}
@@ -134,7 +134,7 @@ canvas {position: absolute; top: 10%; left: 5%; display: inline-block;}
 .demo-box {display: inline-block; -webkit-box-sizing: border-box; box-sizing: border-box; width: 27.5%; height: 60vh; z-index: 100; -webkit-box-shadow: 0.2vw 0.3vw 0.3vw rgba(34,34,34,0.4); box-shadow: 0.2vw 0.3vw 0.3vw rgba(34,34,34,0.4); background-color: #73819A; -webkit-transition: all 0.3s; transition: all 0.3s;}
 .demo-desc {height: 15%; width: 100%; box-sizing: border-box; padding: 12px; font-size: 1.25rem;}
 .carousel-container {width: 100%; height: 75%; background-color: white; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center;}
-.owl-carousel {align-items: center; width: 70%; height: auto;}
+.owl-carousel {align-items: center; width: 60%; height: auto;}
 .carousel-image {}
 .slick-arrow {border: none; margin: 0 4%; font-size: 1.5rem; color: white; background-color: #73819A; -webkit-transition: all 0.2s; transition: all 0.2s;}
 .slick-arrow:active, #burger-button:active, .demo-buttons button:active {-webkit-transform: translateY(0vh);transform: translateY(0vh); -webkit-box-shadow: 0vw 0vw 0vw #fff; box-shadow: 0vw 0vw 0vw #fff; -webkit-transition: all 0.2s; transition: all 0.2s;}
@@ -224,6 +224,7 @@ a.link-logo img {width: 100%; -webkit-transition: all 0.2s; transition: all 0.2s
 }
 
 @media all and (max-width: 767px) {
+  canvas {display: none;}
   .name-container h1 {font-size: 4rem;}
   .side-nav-link {display: inline-block; font-size: 0.75rem; top: 0px; padding: 6px 8px;}
   .side-nav {width: 100vw; height: 40px;}
